@@ -132,6 +132,8 @@ Cacti CHANGELOG
 -feature#5796: Due to Conflicting Interpretations of TCP Ping, Introduce new Ping Method
 -feature#5819: Be more precise on the Graph End time when an end time is not provided
 -feature#5825: Allow remove_device.php to use a list of device id's
+-feature#5828: Add Location and Site to Graph List View
+-feature#5830: Boost logging enhancements
 -feature: Update jQuery to 3.7.1
 -feature: Update jQueryUI to 1.14.0
 -feature: Update billboard.js to 3.13.0
